software.html changed

--- a/linux/software.html
+++ b/linux/software.html
@@ -20,7 +20,7 @@
 		para que la interferencia entre lo que uno piensa y lo que se plasma en la computadora sea la
 		mínima posible.</p>
 
-		<h3 style={color: tomato; text-align: center;}>Software básico<h3>
+		<h3 style="{color: tomato; text-align: center;}">Software básico<h3>
 
 		<p><strong>ps: Aun en construcción.</strong> 
 
