--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,12 @@
                         <p>Aquí subiré, de forma intermitente, algunas publicaciones sobre tópicos variados.
 			El objetivo es aplicar el método de estudio de Richard Feynman.</p>
 
+			<h2>Febrero 2021</h2>
+			<ul>
+				<li>15 Feb 2021 &ndash; <a href="blog/python-scripts-autodocs">
+				Python scripts para automatizar documentos</a></li>
+			</ul>
+
 			<h2>Diciembre 2020</h2>
 			<ul>
 				<li>6 Dic 2020 &ndash; <a href="blog/smith-mano-invisible">
