--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</li>
                     		<li><a href="#">Personal</a>
 				    <ul>
-					<li><a href="blog.html">Blog</a></li>
+					<li><a href="blog" alt="blog">Blog</a></li>
 					<li><a href="docs/CV_Ortiz_Siwar.pdf">Résumée</a></li>
 				    </ul>
 				</li>
