--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 			<nav>
 	                   <ul class="menubar">
                     		<li><a href="index" alt="inicio">Inicio</a></li>
-                   		<li><a href="#">Linux</a>
-				    <ul>
-					<li><a href="linux/software.html">Software que uso</a></li>
-				    </ul>
-				</li>
+				<li><a href="linux/software">Linux</a></li>
                     		<li><a href="#">Personal</a>
 				    <ul>
 					<li><a href="blog" alt="blog">Blog</a></li>
