--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
 	                   <ul class="menubar">
                     		<li><a href="index" alt="inicio">Inicio</a></li>
 				<li><a href="linux/software">Linux</a></li>
-                    		<li><a href="#">Personal</a>
-				    <ul>
-					<li><a href="blog" alt="blog">Blog</a></li>
-					<li><a href="docs/CV_Ortiz_Siwar.pdf">Résumée</a></li>
-				    </ul>
-				</li>
+                    		<li><a href="blog">Blog</a></li>
                     		<li><a href="academia" alt="academia">Academia</a></li>
                 	   </ul>
 			</nav>
