blog.html and academia.html modified

--- a/blog.html
+++ b/blog.html
@@ -15,13 +15,8 @@
                         <nav>
                            <ul class="menubar">
                                 <li><a href="index">Inicio</a></li>
-                                <li><a href="#">Linux</a></li>
-                                <li><a href="#">Personal</a>
-                                   <ul>
-                                        <li><a href="blog">Blog</a></li>
-                                        <li><a href="docs/CV_Ortiz_Siwar.pdf">Résumée</a></li>
-                                   </ul>
-                                </li>
+                                <li><a href="linux/software">Linux</a></li>
+                                <li><a href="blog">Personal</a></li>
                                 <li><a href="academia">Academia</a></li>
                            </ul>
                         </nav>
