--- a/linux/software.html
+++ b/linux/software.html
@@ -20,9 +20,16 @@
 		para que la interferencia entre lo que uno piensa y lo que se plasma en la computadora sea la
 		mínima posible.</p>
 
-		<h3>Software básico</h3>
+		<p>No comulgo con la idea de estar sentado horas frente a la computadora haciendo una sola tarea,
+		por lo tanto, el software que use debe contribuir a reducir al mínimo el tiempo que me toma preparar,
+		por ejemplo, un ensayo, una presentación, una tesis de licenciatura, procesar grandes bases de datos,
+		etc. Bajo estas premisas, decidí eliminar el sistema operativo Microsoft Windows de mi computador y
+		la mayoría de programas con iterfaz gráfica de usuario (del inglés <i>Graphical User Interface</i>),
+		como MS Word, MS Excel, R y demás.</p>
 
-		<p><strong>ps: Aun en construcción.</strong> 
+		<h4>Sistema Operativo</h4>
+
+		<p><strong>ps: Aun en construcción.</strong></p> 
 
            </section>
         </body>
