--- a/linux/software.html
+++ b/linux/software.html
@@ -29,6 +29,12 @@
 
 		<h4>Sistema Operativo</h4>
 
+		<p>Uso una distribución del sistema operativo GNU/Linux llamada Artix Linux que, a su vez, está basada
+		en Arch Linux, una de las distribuciones más usadas. La diferencia entre Artix y Arch es que el primero
+		no utiliza Systemd como sistema de arranque (<i>init system</i>). Por lo general, las distribusiones
+		basadas en Arch permiten al usuario tener control sobre prácticamente todos los programas que se instalan
+		en su computadora.</p>
+
 		<p><strong>ps: Aun en construcción.</strong></p> 
 
            </section>
