more software added

--- a/linux/software.html
+++ b/linux/software.html
@@ -35,6 +35,29 @@
 		basadas en Arch permiten al usuario tener control sobre prácticamente todos los programas que se instalan
 		en su computadora.</p>
 
+		<h4>Gestor de ventanas</h4>
+
+		<p>Uso el gestor de ventanas dwm (<i>Dynamic Window Manager</i>) de <a href="suckless.org">suckless.org</a>.
+		Es un gestor de mínimo uso de recursos, pero fácil de personalizar para satisfacer los requerimientos de
+		cada usuario.</p>
+
+		<h4>Edición de texto y programación</h4>
+
+		<p>Neovim: está basado en Vim y es más que un editor de texto. Las funcionalidades de Neovim pueden ser
+		extendidas instalando <i>plugins</i>. Por ejemplo, en vez de utilizar un ambiente de desarrollo integrado
+		para un solo lenguage de programación, como R studio en el caso del lenguage R, se puede instalar el
+		<i>plugin</i> Nvim-R que permite compilar código R a través de Neovim.</p>
+
+		<h4>Terminal</h4>
+
+		<p>Alacritty: es un emulador de terminal con aceleración por GPU (<i>Graphical Processing Unit</i>) escrito
+		en lenguage Rust. Sin duda, el emulador de terminal más rápido que existe hasta ahora.</p>
+
+		<h4>Shell</h4>
+
+		<p>Zsh: programa que permite a los usuarios del sistema operativo ejecutar comandos y además admite
+		<i>plugins</i> de autocompletado</p>
+
 		<p><strong>ps: Aun en construcción.</strong></p> 
 
            </section>
