--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
                         <nav>
                            <ul class="menubar">
                                 <li><a href="index">Inicio</a></li>
-                                <li><a href="linux/software">Linux</a></li>
+                                <li><a href="software">Software</a></li>
                                 <li><a href="blog">Personal</a></li>
                                 <li><a href="academia">Academia</a></li>
                            </ul>
@@ -25,6 +25,12 @@
                 <section class="main">
                         <p>Aquí subiré, de forma intermitente, algunas publicaciones sobre tópicos variados.
 			El objetivo es aplicar el método de estudio de Richard Feynman.</p>
+
+			<h2>Junio 2021</h2>
+			<ul>
+				<li>12 Jun 2021 &ndash; <a href="blog/capitalistas">
+				¿Todos somos capitalistas?</a></li>
+			</ul>
 
 			<h2>Febrero 2021</h2>
 			<ul>
